CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMOWARD_SOURCES
 TMOWard94.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOWard94.h
 TMOPlugin.h
)


add_library( ward94 SHARED ${TMOWARD_SOURCES} )
add_custom_command( TARGET ward94 POST_BUILD
	COMMAND cp -f libward94${CMAKE_SHARED_LIBRARY_SUFFIX} ../TMOCmd/ward94.tml
	COMMAND cp -f libward94${CMAKE_SHARED_LIBRARY_SUFFIX} ../TMOgui/ward94.tml
	COMMAND cp -f libward94${CMAKE_SHARED_LIBRARY_SUFFIX} ../ward94.tml
#	COMMAND rm -f libward94${CMAKE_SHARED_LIBRARY_SUFFIX}
	)


