CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

IF(UNIX AND NOT LINUX_SET)
 ADD_DEFINITIONS(-D LINUX)
ENDIF(UNIX AND NOT LINUX_SET)

INCLUDE_DIRECTORIES(
../tmolib/
.
)

LINK_LIBRARIES (
tmo
)

SET(TMO_SOURCES
 TMOWu24.cpp
 TMOPlugin.cpp
)


SET(TMOWARD_HEADERS
 TMOWu24.h
 TMOPlugin.h
)


add_library( wu24 SHARED ${TMO_SOURCES} )
add_custom_command( TARGET wu24 POST_BUILD 
	COMMAND cp -f libwu24${CMAKE_SHARED_LIBRARY_SUFFIX} ../TMOCmd/wu24.tml
	COMMAND cp -f libwu24${CMAKE_SHARED_LIBRARY_SUFFIX} ../TMOgui/wu24.tml 
	COMMAND cp -f libwu24${CMAKE_SHARED_LIBRARY_SUFFIX} ../wu24.tml 
#	COMMAND rm -f libwu24${CMAKE_SHARED_LIBRARY_SUFFIX} 
	)


