CMAKE_MINIMUM_REQUIRED(VERSION 2.4.8)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

FIND_PACKAGE(OpenCV REQUIRED)
IF(OpenCV_VERSION VERSION_LESS "2.4.9")
  message(FATAL_ERROR "ERROR: Can't find OpenCV 2.4.9+")
ENDIF()

SET(TMSHDRREGISTERLIB_SOURCES
 TMSHDRRegister.cpp
 TMSHDRAlignHomography.cpp
 TMSHDRAlignOpticalFlow.cpp
 TMSHDRAlignMTB.cpp
)

SET(TMSHDRREGISTER_HEADERS
 TMSHDRRegister.h
 TMSHDRAlignHomography.h
 TMSHDRAlignOpticalFlow.h
 TMSHDRAlignMTB.h
)

ADD_LIBRARY(TMSHDRRegisterLib STATIC ${TMSHDRREGISTERLIB_SOURCES})
TARGET_INCLUDE_DIRECTORIES(TMSHDRRegisterLib PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../tmolib
    ${OpenCV_INCLUDE_DIRS}
)
TARGET_LINK_LIBRARIES(TMSHDRRegisterLib
    tmo
    ${OpenCV_LIBS}
)

SET(EXE_NAME "tmshdrregister${TAG_VERSION}" )
ADD_EXECUTABLE(${EXE_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${EXE_NAME} TMSHDRRegisterLib dl pthread)

add_custom_command( TARGET ${EXE_NAME} POST_BUILD
        COMMAND true
        )
